--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,6 +3,8 @@ plugins {
     id 'kotlin-android'
     id 'kotlin-android-extensions'
 
+    id 'com.google.gms.google-services'
+
 }
 
 android {
@@ -28,27 +30,36 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+
     kotlinOptions {
         jvmTarget = '1.8'
     }
+
     buildFeatures {
         viewBinding true
     }
 }
 
 dependencies {
+    implementation 'androidx.camera:camera-core:1.0.2'
+    apply plugin: 'kotlin-android-extensions'
 
     //noinspection GradleCompatible
     implementation 'androidx.appcompat:appcompat:1.0.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'com.google.android.material:material:1.4.0'
     implementation 'androidx.annotation:annotation:1.2.0'
-    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.3.1'
-    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.1'
+
+    implementation 'com.google.firebase:firebase-auth-ktx:21.0.1'
+    implementation 'androidx.navigation:navigation-fragment-ktx:2.3.5'
+    implementation 'androidx.navigation:navigation-ui-ktx:2.3.5'
+    implementation 'com.google.firebase:firebase-database:20.0.3'
+    implementation 'com.google.firebase:firebase-database-ktx:20.0.3'
+    implementation 'com.google.firebase:firebase-firestore-ktx:24.0.0'
     testImplementation 'junit:junit:4.+'
-    //noinspection GradleCompatible
-    androidTestImplementation 'androidx.test.ext:junit:1.1.1'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0'
+
+    //ML TextRecognition
+    implementation 'com.google.android.gms:play-services-mlkit-text-recognition:17.0.0'
 
     //Carbon https://github.com/ZieIony/Carbon
     implementation 'tk.zielony:carbon:0.16.0.1'
@@ -58,4 +69,6 @@ dependencies {
 
     //EditText https://material.io/components/text-fields/android#using-text-fields
     implementation 'com.google.android.material:material:<version>'
+
+
 }
