--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,6 +42,8 @@ android {
 
 dependencies {
     implementation 'androidx.camera:camera-core:1.0.2'
+    implementation 'com.google.firebase:firebase-firestore:24.0.0'
+    implementation 'com.google.firebase:firebase-auth:21.0.1'
     apply plugin: 'kotlin-android-extensions'
 
     //noinspection GradleCompatible
