--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,9 +3,12 @@
     package="com.hti.Grad_Project">
 
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+
     <uses-feature android:name="android.hardware.camera.any" />
+
     <uses-permission android:name="android.permission.CAMERA" />
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -14,31 +17,46 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.GradProject">
         <activity
-            android:name="com.hti.Grad_Project.Activities.TextRecognitionActivity"
-            android:exported="true">
+            android:name=".Activities.BookActivity"
+            android:exported="true"
+            android:label="@string/title_activity_book"
+            android:theme="@style/Theme.GradProject.NoActionBar">
 
         </activity>
         <activity
-            android:name="com.hti.Grad_Project.Activities.BaseActivity"
+            android:name=".Activities.MyBooks_Activity"
+            android:exported="true"
+            android:label="@string/title_activity_my_saved_book"
+            android:theme="@style/Theme.GradProject.NoActionBar">
+
+        </activity>
+        <activity
+            android:name=".Activities.Pages_NewBook_TextRec_Activity"
+            android:exported="true">
+
+
+        </activity>
+
+        <activity
+            android:name=".Activities.BaseActivity"
             android:exported="false"
             android:label="@string/title_activity_base"
             android:theme="@style/Theme.GradProject.NoActionBar" />
         <activity
-            android:name="com.hti.Grad_Project.Activities.RegisterActivity"
+            android:name=".Activities.RegisterActivity"
             android:exported="false" />
         <activity
-            android:name="com.hti.Grad_Project.Activities.LoginActivity"
-            android:exported="true">
-
-        </activity>
+            android:name=".Activities.LoginActivity"
+            android:exported="true" />
         <activity
-            android:name="com.hti.Grad_Project.Activities.Splash"
+            android:name=".Activities.Splash"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+
         </activity>
     </application>
 
