--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,9 +1,9 @@
 plugins {
     id 'com.android.application'
     id 'kotlin-android'
+    id 'com.google.gms.google-services'
     id 'kotlin-android-extensions'
 
-    id 'com.google.gms.google-services'
 
 }
 
@@ -18,6 +18,9 @@ android {
         versionName "1.0"
 
         testInstrumentationRunner 'androidx.test.runner.AndroidJUnitRunner'
+        vectorDrawables {
+            useSupportLibrary true
+        }
     }
 
     buildTypes {
@@ -33,10 +36,21 @@ android {
 
     kotlinOptions {
         jvmTarget = '1.8'
+        useIR = true
     }
 
     buildFeatures {
         viewBinding true
+        compose true
+    }
+    composeOptions {
+        kotlinCompilerExtensionVersion compose_version
+        kotlinCompilerVersion '1.5.21'
+    }
+    packagingOptions {
+        resources {
+            excludes += '/META-INF/{AL2.0,LGPL2.1}'
+        }
     }
 }
 
@@ -44,13 +58,29 @@ dependencies {
     implementation 'androidx.camera:camera-core:1.0.2'
     implementation 'com.google.firebase:firebase-firestore:24.0.0'
     implementation 'com.google.firebase:firebase-auth:21.0.1'
-    apply plugin: 'kotlin-android-extensions'
+    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.4.0'
+
+    //Compose
+    implementation "androidx.compose.ui:ui:$compose_version"
+    implementation "androidx.compose.material:material:$compose_version"
+    implementation "androidx.compose.ui:ui-tooling-preview:$compose_version"
+    androidTestImplementation "androidx.compose.ui:ui-test-junit4:$compose_version"
+    debugImplementation "androidx.compose.ui:ui-tooling:$compose_version"
+
+    //bottom navigation
+    def nav_compose_version = "2.4.0-alpha06"
+    implementation "androidx.navigation:navigation-compose:$nav_compose_version"
+
+    implementation 'androidx.activity:activity-compose:1.4.0'
+
+    //Nav between Items
+    implementation "androidx.navigation:navigation-compose:2.4.0-beta02"
 
     //noinspection GradleCompatible
-    implementation 'androidx.appcompat:appcompat:1.0.0'
-    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+    implementation 'androidx.appcompat:appcompat:1.4.0'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.2'
     implementation 'com.google.android.material:material:1.4.0'
-    implementation 'androidx.annotation:annotation:1.2.0'
+    implementation 'androidx.annotation:annotation:1.3.0'
 
     implementation 'com.google.firebase:firebase-auth-ktx:21.0.1'
     implementation 'androidx.navigation:navigation-fragment-ktx:2.3.5'
