--- a/app/build.gradle
+++ b/app/build.gradle
@@ -74,7 +74,7 @@ dependencies {
     implementation 'androidx.activity:activity-compose:1.4.0'
 
     //Nav between Items
-    implementation "androidx.navigation:navigation-compose:2.4.0-beta02"
+    implementation "androidx.navigation:navigation-compose:2.4.0-rc01"
 
     //noinspection GradleCompatible
     implementation 'androidx.appcompat:appcompat:1.4.0'
@@ -91,7 +91,7 @@ dependencies {
     testImplementation 'junit:junit:4.+'
 
     //ML TextRecognition
-    implementation 'com.google.android.gms:play-services-mlkit-text-recognition:17.0.0'
+    implementation 'com.google.android.gms:play-services-mlkit-text-recognition:17.0.1'
 
     //Carbon https://github.com/ZieIony/Carbon
     implementation 'tk.zielony:carbon:0.16.0.1'
@@ -101,6 +101,5 @@ dependencies {
 
     //EditText https://material.io/components/text-fields/android#using-text-fields
     implementation 'com.google.android.material:material:<version>'
-
 
 }
