--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,6 +5,7 @@ plugins {
     id 'kotlin-android-extensions'
 
 
+
 }
 
 android {
@@ -21,6 +22,7 @@ android {
         vectorDrawables {
             useSupportLibrary true
         }
+
     }
 
     buildTypes {
@@ -52,6 +54,7 @@ android {
             excludes += '/META-INF/{AL2.0,LGPL2.1}'
         }
     }
+
 }
 
 dependencies {
@@ -64,6 +67,7 @@ dependencies {
     implementation "androidx.compose.ui:ui:$compose_version"
     implementation "androidx.compose.material:material:$compose_version"
     implementation "androidx.compose.ui:ui-tooling-preview:$compose_version"
+    implementation 'com.android.volley:volley:1.2.0'
     androidTestImplementation "androidx.compose.ui:ui-test-junit4:$compose_version"
     debugImplementation "androidx.compose.ui:ui-tooling:$compose_version"
 
@@ -94,12 +98,26 @@ dependencies {
     implementation 'com.google.android.gms:play-services-mlkit-text-recognition:17.0.1'
 
     //Carbon https://github.com/ZieIony/Carbon
-    implementation 'tk.zielony:carbon:0.16.0.1'
+    implementation 'tk.zielony:carbon:0.17.0'
 
     //circular Progressbar https://github.com/ybq/Android-SpinKit
     implementation 'com.github.ybq:Android-SpinKit:1.4.0'
 
     //EditText https://material.io/components/text-fields/android#using-text-fields
     implementation 'com.google.android.material:material:<version>'
+
+    // Retrofit https://square.github.io/retrofit/
+    implementation 'com.squareup.retrofit2:retrofit:2.6.2'
+    implementation 'com.squareup.retrofit2:converter-gson:2.6.2'
+
+    //SpinKIt
+    implementation 'com.github.ybq:Android-SpinKit:1.4.0'
+
+    //Kotfirebase//
+    implementation 'com.github.raipankaj:kotfirebase:1.0.6'
+
+    //Live Data
+    implementation 'androidx.compose.runtime:runtime-livedata:1.1.0-rc01'
+
 
 }
