--- a/build.gradle
+++ b/build.gradle
@@ -7,7 +7,9 @@ buildscript {
         google()
         mavenCentral()
         jcenter()
+
     }
+
     dependencies {
         classpath "com.android.tools.build:gradle:7.0.4"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.5.31"
@@ -15,6 +17,12 @@ buildscript {
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
+    }
+}
+
+allprojects {
+    repositories {
+        maven { url 'https://jitpack.io' }
     }
 }
 
