--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,6 @@ plugins {
     id 'kotlin-android-extensions'
 
 
-
 }
 
 android {
@@ -70,6 +69,7 @@ dependencies {
     implementation "androidx.compose.material:material:$compose_version"
     implementation "androidx.compose.ui:ui-tooling-preview:$compose_version"
     implementation 'com.android.volley:volley:1.2.0'
+    implementation 'androidx.test:core-ktx:1.4.0'
     androidTestImplementation "androidx.compose.ui:ui-test-junit4:$compose_version"
     debugImplementation "androidx.compose.ui:ui-tooling:$compose_version"
 
@@ -128,6 +128,10 @@ dependencies {
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'com.airbnb.android:lottie:3.6.1'
     implementation 'com.jaeger.statusbarutil:library:1.5.1'
+//log error
+    implementation 'com.squareup.okhttp3:logging-interceptor:3.4.1'
+    implementation 'com.squareup.okhttp3:okhttp:3.4.1'
+//    implementation 'com.karumi:dexter:5.0.0'
 
 
 }
